--- a/designs/UI/templates/index.html
+++ b/designs/UI/templates/index.html
@@ -54,7 +54,7 @@
                     <p>We built this especially for you</p>
                     <p class="lead">
                       <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
-                      <a class="btn btn-info btn-lg" href="login.html" role="button">Log in</a>
+                      <a class="btn btn-info btn-lg" href="{{url_for('login')}}" role="button">Log in</a>
                     </p>
               </div>  
 
