--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="background-image:url(images/cover.jpg)">
+  <body>
         <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,8 +46,12 @@
             <li class="breadcrumb-item active">Sign Up</li>
             </ol> 
         
-              <form action="{{url_for('dashboard')}}" method="POST">
+              <form action="{{url_for('signupsuccess')}}" method="POST">
                   <div class="form-group">
+                      <label for="exampleInputText1">Full name</label>
+                      <input type="text" class="form-control" id="exampleInputText1" placeholder="Full name"name="name">  
+                      <label for="exampleInputText1">Username</label>
+                      <input type="text" class="form-control" id="exampleInputText1" placeholder="Username" name="username">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email_name" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
@@ -55,6 +59,7 @@
                   <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+                    {{text | safe}}
                   </div>
                   
                   <button type="submit" class="btn btn-info">Submit</button>
