--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,6 +19,7 @@
     <![endif]-->
   </head>
   <body>
+    
         <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,41 +33,36 @@
                       <a class="nav-link" href="{{url_for('index')}}">Home</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{url_for('signup')}}">Sign up <span class="sr-only">(current)</a>
+                      <a class="nav-link" href="{{url_for('signup')}}">Sign up</a>
                     </li>
-                    <li class="nav-item">
-                            <a class="nav-link" href="recipes-list.html">Recipes</a>
+                    <li class="nav-item active">
+                            <a class="nav-link" href="{{url_for('login')}}">Log in <span class="sr-only">(current)</span></a>
                           </li>
                   </ul>
-                  
                 </div>
               </nav>
             </br>         
             <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Sign Up</li>
+            <li class="breadcrumb-item active">Log in</li>
             </ol> 
-        
-              <form action="{{url_for('signupsuccess')}}" method="POST">
-                  <div class="form-group">
-                      <label for="exampleInputText1">Full name</label>
-                      <input type="text" class="form-control" id="exampleInputText1" placeholder="Full name"name="name">  
-                      <label for="exampleInputText1">Username</label>
-                      <input type="text" class="form-control" id="exampleInputText1" placeholder="Username" name="username">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email_name" required>
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
-                    {{text | safe}}
-                  </div>
-                  
-                  <button type="submit" class="btn btn-info">Submit</button>
-                </form>
-<nav class="navbar fixed-bottom navbar-light bg-info">
-        <p class="text-center">&copy 2017 | Allan Koech</p>
-      </nav> 
+
+              <form action="{{url_for('loginsuccess')}}" method="POST">
+                <div class="form-group">
+                    
+                  <label for="exampleInputEmail1">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email_name" required>
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+                  {{text | safe}} 
+                </div>               
+                <button type="submit" class="btn btn-info">Submit</button>
+              </form>
+                  <nav class="navbar fixed-bottom navbar-light bg-info">
+                        <p class="text-center">&copy 2017 | Allan Koech</p>
+                      </nav> 
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
